# pure.rs

./: Cargo.toml  README.md  build.sh
.cargo/: config
examples/: helloworld.rs
src/: exit.rs  lib.rs  main.rs  print.rs  pure.rs
