[package]
name = "pure"
version = "0.1.0"
authors = ["nexos <nexoscp@users.noreply.github.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




